Created demo input handler and basic classes

--- a/Visual Sudoku/Visual Sudoku.vcxproj
+++ b/Visual Sudoku/Visual Sudoku.vcxproj
@@ -129,6 +129,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Documents\glad\src\glad.c" />
+    <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Game.h" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
