--- a/Visual Sudoku/Visual Sudoku.vcxproj.filters
+++ b/Visual Sudoku/Visual Sudoku.vcxproj.filters
@@ -17,6 +17,15 @@
     <ClCompile Include="main.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="Board.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.h">
+      <Filter>include</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h">
